; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/ieee1394/extr_ieee1394_core.c_hpsb_selfid_received.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/ieee1394/extr_ieee1394_core.c_hpsb_selfid_received.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hpsb_host = type { i32, i32, i32*, i64 }

@.str = private unnamed_addr constant [22 x i8] c"Including SelfID 0x%x\00", align 1
@.str.1 = private unnamed_addr constant [53 x i8] c"Spurious SelfID packet (0x%08x) received from bus %d\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @hpsb_selfid_received(%struct.hpsb_host* %0, i32 %1) #0 {
  %3 = alloca %struct.hpsb_host*, align 8
  %4 = alloca i32, align 4
  store %struct.hpsb_host* %0, %struct.hpsb_host** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.hpsb_host*, %struct.hpsb_host** %3, align 8
  %6 = getelementptr inbounds %struct.hpsb_host, %struct.hpsb_host* %5, i32 0, i32 3
  %7 = load i64, i64* %6, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %22

9:                                                ; preds = %2
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @HPSB_VERBOSE(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i32 %10)
  %12 = load i32, i32* %4, align 4
  %13 = load %struct.hpsb_host*, %struct.hpsb_host** %3, align 8
  %14 = getelementptr inbounds %struct.hpsb_host, %struct.hpsb_host* %13, i32 0, i32 2
  %15 = load i32*, i32** %14, align 8
  %16 = load %struct.hpsb_host*, %struct.hpsb_host** %3, align 8
  %17 = getelementptr inbounds %struct.hpsb_host, %struct.hpsb_host* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = add nsw i32 %18, 1
  store i32 %19, i32* %17, align 4
  %20 = sext i32 %18 to i64
  %21 = getelementptr inbounds i32, i32* %15, i64 %20
  store i32 %12, i32* %21, align 4
  br label %29

22:                                               ; preds = %2
  %23 = load i32, i32* %4, align 4
  %24 = load %struct.hpsb_host*, %struct.hpsb_host** %3, align 8
  %25 = getelementptr inbounds %struct.hpsb_host, %struct.hpsb_host* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 8
  %27 = call i32 @NODEID_TO_BUS(i32 %26)
  %28 = call i32 @HPSB_NOTICE(i8* getelementptr inbounds ([53 x i8], [53 x i8]* @.str.1, i64 0, i64 0), i32 %23, i32 %27)
  br label %29

29:                                               ; preds = %22, %9
  ret void
}

declare dso_local i32 @HPSB_VERBOSE(i8*, i32) #1

declare dso_local i32 @HPSB_NOTICE(i8*, i32, i32) #1

declare dso_local i32 @NODEID_TO_BUS(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
